# fetrunner

./: .gitignore  CMakeLists.txt  README.md  dispatch.go  dispatch_ttview.go  fetrunner_help.qrc  go.mod  go.sum  resources.qrc  simple_runner.go  version.go  zensical.toml
autotimetable/: constraints.go  instance.go  interface.go  phases.go  result.go  run_fet.go  runqueue.go  steer.go  structures.go  todo.go
base/: config.go  constraints_teacher.go  db_manager.go  dispatch.go  logging.go  structures.go  version.go
cmd/fetrunner/: main.go
cmd/fetrunner_W365/: main.go
cmd/fetrunner_W365_orig/: main.go
cmd/fetrunner_orig/: main.go
db/: constraints.go  constraints_activity.go  constraints_class.go  constraints_room.go  constraints_teacher.go  db_manager.go  io.go  structures.go
dispatcher/: dispatch.go
docs/: GUI_details.md  README_GUI.md  Result_JSON.md  TODO  automatic_constraint_switching.md  fet_temporary_files.md  fetrunner.md  fetrunner_structure.md  how_fetrunner_works.md  index.md  modular_program_structure.md  temporary_files.md  threads_processes.md  using _the_gui.md  using_fetrunner.md  using_the_gui.md
docs/Changes/: v.0.20.0
docs/W365/: constraintelemente.md  stundenplanschnittstelle.md
docs/db/: blockroomchoices.md  constraints.md  prepare_timetable_backend.md
docs/timetable_view/: TimetableView.md
examples/: ParallelCourses.fet  example1.fet
examples/example1/: Result.json  example1.fet
fet/: constraint_order.go  fet_read.go  interface.go  linux.go  run_fet.go
fet-cmake/: CMakeLists.txt  README-FET-CMake.md  README.md
fet-cmake/src/: CMakeLists.txt
fet-cmake/src-cl/: CMakeLists.txt
fet-cmake/src-clw/: CMakeLists.txt
fetfilter/: fet_read.go
fetmods/: README_FET_BUILD  fet.pro  src-clw.pro
fetmods/cmake/: CMakeLists.txt  README
fetmods/cmake/fetrunner/gui/: CMakeLists.txt
fetmods/cmake/src/: CMakeLists.txt
fetmods/cmake/src-cl/: CMakeLists.txt
gui/: CMakeLists.txt  README  README.md  backend.cpp  backend.h  canvas.cpp  canvas.h  chip.cpp  chip.h  fetrunner-gui.pro  fetrunner-gui_de.ts  fetrunner.cpp  fetrunner.desktop  fetrunner.h  fetrunner.ui  fetrunner_help.qrc  globals.h  logreader.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui_backup  mainwindow_old.cpp  mainwindow_old.ui  progress_delegate.cpp  progress_delegate.h  progress_table.cpp  readlog_thread.cpp  readlog_thread.h  support.h  threadrun.cpp  threadrun.h  tt_show_resource.cpp  tt_show_resource.h  tt_showclass.cpp  tt_showclass.h  tt_showroom.cpp  tt_showroom.h  tt_showteacher.cpp  (+16 more)
gui/backend/: README  fetrunner.go  go.mod  libfetrunner.h
gui/help/: using_fetrunner.md
gui/translations/: fetrunner-gui_de.ts
help/: 404.html  GUI_details.html  Result_JSON.html  automatic_constraint_switching.html  fetrunner.html  how_fetrunner_works.html  index.html  modular_program_structure.html  search.js  search.json  sitemap.xml  temporary_files.html  threads_processes.html  using_fetrunner.html  using_the_gui.html
help/Changes/: v.0.30.0
help/W365/: constraintelemente.html  stundenplanschnittstelle.html
help/db/: blockroomchoices.html  constraints.html  prepare_timetable_backend.html
internal/autotimetable/: constraints.go  interface.go  phases.go  placements.go  platform_windows.go  result.go  runqueue.go  steer.go  structures.go
internal/base/: constraints.go  constraints_activity.go  constraints_class.go  constraints_room.go  constraints_teacher.go  db_manager.go  io.go  logging.go  platform_linux.go  platform_windows.go  structures.go  version.go
internal/fet/: build_base.go  constraint_order.go  db_activities.go  db_basic_elements.go  db_build_base.go  db_classes.go  db_constraints_activities.go  db_constraints_class.go  db_constraints_placement.go  db_constraints_teacher.go  db_make_etree.go  db_not_available.go  db_placements.go  fet_read.go  gen_activities.go  gen_basic_elements.go  gen_constraints_activities.go  gen_constraints_class.go  gen_constraints_placement.go  gen_constraints_teacher.go  gen_not_available.go  interface.go  make_etree.go  platform_windows.go  read_elements.go  run_fet.go
internal/makefet/: activities.go  basic_elements.go  build_base.go  classes.go  constraints_activities.go  constraints_class.go  constraints_placement.go  constraints_teacher.go  make_etree.go  not_available.go  read_placements.go
internal/timetable/: atomicgroups.go  constraints.go  constraints_activities.go  constraints_classes.go  constraints_not_available.go  constraints_placements.go  constraints_teachers.go  courseinfo.go  placements.go  roomfilter.go  ttstructures.go
internal/w365tt/: fromjson.go  readclasses.go  readconstraints.go  readcourses.go  readlessons.go  readrooms.go  structures.go
libfetrunner/: README  README.md  dispatch.go  libfetrunner.go  libfetrunner.h
makefet/: activities.go  basic_elements.go  build_base.go  classes.go  constraints.go  constraints_activities.go  constraints_class.go  constraints_extra.go  constraints_placement.go  constraints_room.go  constraints_teacher.go  fet_base.go  make_etree.go  not_available.go  read_placements.go  rooms.go  subjects.go  teachers.go  timeslots.go
makefet/todo/: activities.go  constraints.go  constraints_class.go  constraints_extra.go  constraints_room.go  constraints_teacher.go  fet_base.go  rooms.go
test/: run_fet-cl  test.sh
test/tests_fet/: README_50_52  test01.fet  test02.fet  test03.fet  test04.fet  test05.fet  test06.fet  test07.fet  test08.fet  test09.fet  test50.fet  test51.fet  test52.fet
test/tests_w365/: test100_w365.json  test101_w365.json  test102_w365.json  test103_w365.json  test104_w365.json  test105_w365.json  test106_w365.json
timetable/: atomicgroups.go  constraints.go  courseinfo.go  roomfilter.go  ttstructures.go
w365tt/: fromjson.go  fromjson_test.go  readclasses.go  readconstraints.go  readcourses.go  readlessons.go  readrooms.go  structures.go
